--- a/users/templates/admin/admin_dashboard.html
+++ b/users/templates/admin/admin_dashboard.html
@@ -16,10 +16,10 @@
     {% endif %}
 </div>
 {% comment %} Options Grid {% endcomment %}
-<div class="w-3/4 mx-auto border-2 border-black p-4 bg-gray-50">
+<div class="w-5/6 mx-auto  p-8 rounded-md bg-gray-50">
     <section class="progress grid grid-cols-2 sm:grid-cols-4 gap-6 justify-between">
         <a href="{% url 'user-list' %}">
-            <div class="progress_card bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl">
+            <div class="progress_card bg-gray-200 p-4 rounded-md  shadow-xl">
                 <h3 class="card_heading text-md mb-2 font-bold">Total Participants</h3>
                 {% comment %} Value and Icon {% endcomment %}
                 <div class="card_body flex justify-between">
@@ -35,10 +35,15 @@
                     <!-- parent div ke flex kore justify content k center e anchi, ete icon center e asche -->
                     </div>
                 </div>
+                <ul class="list-disc list-inside">
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                </ul>
             </div>
         </a>
         <a href="{% url 'admin-event-list' %}">
-            <div class="progress_card  bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl">
+            <div class="progress_card  bg-gray-200 p-4 rounded-md  shadow-xl">
                 <h3 class="card_heading text-md mb-2 font-bold">Total Events</h3>
                 <div class="card_body flex justify-between">
                     <div class="text_side">
@@ -53,10 +58,15 @@
                     <!-- parent div ke flex kore justify content k center e anchi, ete icon center e asche -->
                     </div>
                 </div>
+                <ul class="list-disc list-inside">
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                </ul>
             </div>
         </a>
         <a href="{% url 'group-list' %}">
-            <div class="progress_card  bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl ">
+            <div class="progress_card  bg-gray-200 p-4 rounded-md  shadow-xl ">
                 <h3 class="card_heading text-md mb-2 font-bold">Groups</h3>
                 <div class="card_body flex justify-between">
                     <div class="text_side">
@@ -71,10 +81,15 @@
                     <!-- parent div ke flex kore justify content k center e anchi, ete icon center e asche -->
                     </div>
                 </div>
+                <ul class="list-disc list-inside">
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                </ul>
             </div>
         </a>
         <a href="{% url 'category-list' %}">
-            <div class="progress_card  bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl">
+            <div class="progress_card  bg-gray-200 p-4 rounded-md  shadow-xl">
                 <h3 class="card_heading text-md mb-2 font-bold">Categories</h3>
                 <div class="card_body flex justify-between">
                     <div class="text_side">
@@ -89,10 +104,15 @@
                     <!-- parent div ke flex kore justify content k center e anchi, ete icon center e asche -->
                     </div>
                 </div>
+                <ul class="list-disc list-inside">
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                </ul>
             </div>
         </a>
         <a href="{% url 'organizer-dashboard' %}">
-            <div class="progress_card  bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl">
+            <div class="progress_card bg-gray-200 p-4 rounded-md  shadow-xl">
                 <h3 class="card_heading text-md mb-2 font-bold">Events You Manage</h3>
                 <div class="card_body flex justify-between">
                     <div class="text_side">
@@ -107,6 +127,11 @@
                     <!-- parent div ke flex kore justify content k center e anchi, ete icon center e asche -->
                     </div>
                 </div>
+                <ul class="list-disc list-inside">
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                </ul>
             </div>
         </a>
         
