--- a/core/templates/sidebar.html
+++ b/core/templates/sidebar.html
@@ -1,18 +1,19 @@
 <div 
-    class=" bg-slate-200 border-r-4  border-blue-400 h-screen p-4 flex flex-col space-y-2" >
-        <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-1 ">
-            <a href="{% url 'user-profile' %}" title='User Dashboard'>Profile</a>
+    class=" bg-slate-200 border-r-4  border-blue-400 h-screen text-base sticky top-0 left-0 p-2 flex flex-col space-y-2" >
+        <h3 class="text-lg font-semibold my-4 ">Hello {{user.first_name}}</h3>
+        <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-2 ">
+            <a href="{% url 'user-profile' %}" title='Profile' class="block">Profile</a>
         </p>
-        <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-1 ">
-            <a href="{% url 'dashboard' %}" title='User Dashboard'>Dashboard</a>
+        <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-2 ">
+            <a href="{% url 'dashboard' %}" title='Your Dashboard' class="block">Dashboard</a>
         </p>
-        <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-1 ">
-            <a href="{% url 'user-dashboard' %}" title='User Dashboard'>Your Events</a>
+        <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-2 ">
+            <a href="{% url 'user-dashboard' %}" title='User Dashboard' class="block">Your Events</a>
         </p>
-        <p class="border-b-gray-400 border-2 p-1 rounded-md hover:bg-slate-300">
-            <a href="{% url 'update-profile' user.id %}">Update Profile</a>
+        <p class="border-b-gray-400 border-2 p-2 rounded-md hover:bg-slate-300">
+            <a href="{% url 'update-profile' user.id %}" class="block">Update Profile</a>
         </p>
-        <p class="border-b-gray-400 border-2 p-1 hover:bg-slate-300">
-            <a href="{% url "password-change" %}">Change Password</a>
+        <p class="border-b-gray-400 border-2 p-2 hover:bg-slate-300">
+            <a href="{% url "password-change" %}" class="block">Change Password</a>
         </p>
 </div>
