--- a/users/templates/admin/assign_role.html
+++ b/users/templates/admin/assign_role.html
@@ -1,16 +1,30 @@
 {% extends "base.html" %}
 {% block title %}Assign Role{% endblock title %}
 {% block content %}
-    <div>
-        {% if messages %}
-            {% for message in messages %}
-                <p>{{message}}</p>
-            {% endfor %}
-        {% endif %}
+    <div class="w-1/3 mx-auto bg-gray-50 rounded-md shadow-xl my-10 p-8">
+        <h1 class="font-bold text-2xl text-center my-4">Change Role of {{currentUser.first_name}} {{currentUser.last_name}}</h1>
+        <div>
+            {% if messages %}
+                {% for message in messages %}
+                    <p class="p-2 rounded-sm bg-red-300 my-2">{{message}}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
         <form action="" method="POST">
             {% csrf_token %}
-            {{form}}
-            <button type="submit">Assign Role</button>
+            {% for field in form %}
+                <label 
+                    for="{{field.id_for_label}}"
+                    class="text-lg font-semibold">{{field.label}}</label>
+                <div>
+                    {{field}}
+                </div>
+            {% endfor %}
+            {% comment %} {{form}} {% endcomment %}
+            <button 
+                type="submit"
+                class="w-full p-4 bg-indigo-400 text-lg font-semibold my-4 rounded-md hover:bg-indigo-600">Assign Role
+            </button>
         </form>
     </div>
 
