fixed profile image upload & password reset & change feature

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title %}Eventum{% endblock title %}
 {% block content %}
 <div class="w-full">
     {% comment %} Heading and Hero Section {% endcomment %}
