--- a/events/templates/create_event.html
+++ b/events/templates/create_event.html
@@ -39,12 +39,12 @@
                     Submit
                 </button>
             </div>
-            <p class="font-bold text-red-700">
+            {% comment %} <p class="font-bold text-red-700">
                 Cannot find your participant? 
                 <a href="{% url 'create-participant' %}" class="text-blue-600">
                     Create participant here at first
                 </a>
-            </p>
+            </p> {% endcomment %}
         </form>
     </div>
 </section>
