--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Management{% block title %}{% endblock title %} </title>
+    <title>{% block title %}{% endblock title %} </title>
     {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
