--- a/core/templates/non_logged_nav.html
+++ b/core/templates/non_logged_nav.html
@@ -8,23 +8,33 @@
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
 <body>
-    <section class="dashboard flex justify-between mb-3 bg-slate-200 p-5">
-        <h1 class="text-xl font-semibold">
+    <section class="dashboard flex justify-between  bg-slate-200 ">
+        <h1 class="text-xl font-semibold p-4">
             <a href="{% url 'home' %}">Event</a></li>
         </h1>
         <div >
             <ul class="flex justify-around gap-x-4 ">
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href=""></a>Events</li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Pages</a></li>
-                <li><a href="">About Us</a></li>
+                <li class="p-4">
+                    <a href="{% url 'home' %}">Home</a>
+                </li>
+                <li class="hover:bg-slate-100 rounded-sm p-4">
+                    <a href="{% url 'events' %}" class="block">Events</a>
+                </li>
+                <li class="p-4">
+                    <a href="">Gallery</a>
+                </li>
+                <li class="p-4">
+                    <a href="">Pages</a>
+                </li>
+                <li class="p-4">
+                    <a href="">About Us</a>
+                </li>
                 {% comment %} <a href="{% url 'dashboard' %}">Dashboard</a> {% endcomment %}
                 
             </ul>
             
         </div>
-        <div class="icon_home flex gap-x-3">
+        <div class="icon_home flex gap-x-3 p-4">
             
               
             <div class="home_btn  bg-sky-500 rounded  p-1 text-center">
