--- a/events/templates/event_details.html
+++ b/events/templates/event_details.html
@@ -53,10 +53,12 @@
 </section>
 {% comment %} Participant List:  {% endcomment %}
 <div class="text-left w-4/5 mx-auto my-4">
-    <h4 class="text-xl font-bold">Participants: </h4>
+    <h4 class="text-xl font-bold  mb-4">Participants: </h4>
     <ul class="list-disc list-inside">
         {% for member in event.participants.all %}
             <li>{{member.first_name}} {{member.last_name}}</li>
+        {% empty %}
+            <p class="p-4 bg-green-300 rounded-md w-fit text-base">No participants yet. Hurry Up! Be the first participant!!</p>
         {% endfor %}
     </ul>
 </div>
