--- a/users/templates/accounts/password_change.html
+++ b/users/templates/accounts/password_change.html
@@ -1,30 +1,48 @@
 {% extends "base.html" %}
 {% block title %}Password Change{% endblock title %}
 {% block content %}
-    <div>
-        {% comment %} for non-field errors {% endcomment %}
-        {% comment %} {% if form.non_field_errors %}
-            {% for error in form.non_field_errors %}
-                <p>{{error}}</p>
-            {% endfor %}
-        {% endif %} {% endcomment %}
+<section class="my-10">
+    <h1 class="text-center text-3xl font-bold mb-4">Change Your Password</h1>
+    <div class="w-4/5 md:w-1/3 mx-auto p-8  border-2 rounded-md bg-gray-50 shadow-md">
+        <div>
+            {% comment %} for non-field errors {% endcomment %}
+            {% comment %} {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <p>{{error}}</p>
+                {% endfor %}
+            {% endif %} {% endcomment %}
+        </div>
+        <div>
+            {% if messages %}
+                {% for message in messages %}
+                <p class="p-2 bg-pink-100 rounded-sm my-2">{{message}}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            <form action="" method="POST">
+                {% csrf_token %}
+                {% for field in form %}
+                    <label for="{{field.id_for_label}}" class="font-semibold ">{{field.label}}</label>
+                    <div>
+                        {{field}}
+                    </div>
+                    {% if field.errors %}
+                        {% for error in field.errors %}
+                            <p class="p-2 text-sm bg-red-100 my-1 font-semibold rounded-sm">
+                                {{error}}
+                            </p>
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                {% comment %} {{form.as_p}} {% endcomment %}
+                <button 
+                    type="submit"
+                    class="mt-4 px-4 py-2 font-bold text-lg text-white rounded-lg bg-blue-500 hover:bg-blue-600">
+                    Change Password
+                </button>
+            </form>
+        </div>
     </div>
-    <div>
-        {% if messages %}
-            {% for message in messages %}
-            <p>{{message}}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <div>
-        <form action="" method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button 
-                type="submit"
-                class="mt-4 px-4 py-2 text-white rounded-lg bg-blue-500 hover:bg-blue-600">
-                Submit
-            </button>
-        </form>
-    </div>
+</section>
 {% endblock content %}
