--- a/users/templates/accounts/password_change_done.html
+++ b/users/templates/accounts/password_change_done.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1 class='text-2xl font-bold'>Password Change Done</h1>
+    <h1 class='w-4/5 md:w-2/3 mx-auto text-2xl font-bold text-center p-8 bg-green-100 rounded-md shadow-xl my-10'>
+        Password Change Done
+    </h1>
 {% endblock content %}
