--- a/users/templates/dashboard/user_dashboard.html
+++ b/users/templates/dashboard/user_dashboard.html
@@ -2,7 +2,7 @@
 {% block title %}User Dashboard{% endblock title %}
 {% block content %}
 
-<div class="min-w-1/2 w-fit  mx-auto border-2 border-black p-5 rounded-sm">
+<div class="w-11/12 mx-auto border-2  p-4 my-4 rounded-sm">
     <h2 class="font-bold">Hello {{user.first_name}} {{user.last_name}}</h2>
     <div>
         {% if messages %}
@@ -13,8 +13,8 @@
             {% endfor %}
         {% endif %}
     </div>
-    <p class="text-2xl font-semibold">Events you have registered to </p>
-    <div class="grid grid-cols-4 gap-1 text-sm mt-2 border-2 my-6 p-2 rounded-lg shadow-xl  bg-green-200">
+    <p class="text-2xl font-semibold my-2">Events you have registered to </p>
+    <div class="grid grid-cols-4 gap-1 text-lg font-semibold mt-2 border-2 my-6 p-4 rounded-lg shadow-xl  bg-green-200">
         <div>Event Name</div>
         <div>Category </div>
         <div>Participants</div>
@@ -51,8 +51,10 @@
                 
             </div>
         </div>
-    
-    
+        {% empty %}
+            <div class="p-4 w-full md:w-3/4 mx-auto bg-violet-200 rounded-md text-base font-semibold text-center">
+                You have not registered to any event yet. Regsiter Now!!!
+            </div>
     {% endfor %}
 
 
