--- a/users/templates/registration/create_participant.html
+++ b/users/templates/registration/create_participant.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1 class="text-3xl text-center font-semibold">{{form_title}}</h1>
-    <div class="w-1/3 mx-auto my-10 border-2 border-black p-8 rounded-md">
+    <h1 class="text-3xl text-center font-semibold mt-4">{{form_title}}</h1>
+    <div class="w-5/6 md:w-1/3 mx-auto my-10 border-2 border-black p-8 rounded-md">
         {% if messages %}
             {% for message in messages %}
                 <p class="px-2 py-1 border-2 bg-red-300 rounded-sm my-2">
@@ -10,8 +10,7 @@
             {% endfor %}
         {% endif %}
         <div class="">
-
-            <form action="" method="POST" >
+            <form action="" method="POST" enctype="multipart/form-data" >
                 {% csrf_token %}
                 {% for field in participant_form %}
                     <div class="">
