--- a/users/templates/registration/reset_password.html
+++ b/users/templates/registration/reset_password.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Reset Password{% endblock title %}
 {% block content %}
-<div class="w-1/3 mx-auto border-2 border-gray-400 shadow-md rounded-md p-4">
+<div class="w-5/6 md:w-1/3 mx-auto my-10 border-2 border-gray-400 shadow-md rounded-md p-4">
+    <h1 class="text-3xl font-bold text-center my-4">Recover Your Account</h1>
+    <h2 class="text-2xl font-semibold text-center mb-2">Reset your password</h2>
     <div>
         {% comment %} for non-field errors {% endcomment %}
         {% comment %} {% if form.non_field_errors %}
@@ -13,7 +15,7 @@
     <div>
         {% if messages %}
             {% for message in messages %}
-            <p>{{message}}</p>
+            <p class="p-2 my-2 bg-rose-200 rounded-sm">{{message}}</p>
             {% endfor %}
         {% endif %}
     </div>
