connected to render db

--- a/users/templates/admin/category_list.html
+++ b/users/templates/admin/category_list.html
@@ -50,6 +50,10 @@
                     </div>
                 </div>
             </div>
+            {% empty %}
+                <div class="font-semibold text-xl p-4 rounded-md bg-rose-100 text-center">
+                    No Category available yet
+                </div>
         {% endfor %}
     </div>
 
